testdata/baselines/reference/submodule/conformance/overloadTag3.errors.txt
/a.js(12,16): error TS2304: Cannot find name 'T'.
/a.js(17,12): error TS2315: Type 'Foo' is not generic.


==== /a.js (2 errors) ====
    /**
     * @template T
     */
    export class Foo {
        /**
         * @constructor
         * @overload
         */
        constructor() { }
    
        /**
         * @param {T} value
                   ~
!!! error TS2304: Cannot find name 'T'.
         */
        bar(value) { }
    }
    
    /** @type {Foo<number>} */
               ~~~~~~~~~~~
!!! error TS2315: Type 'Foo' is not generic.
    let foo;
    foo = new Foo();
    